packages/portable_pty/rust/bindings.h

#ifndef PORTABLE_PTY_H
#define PORTABLE_PTY_H

/*
This file is automatically generated by build.rs; DO NOT MANUALLY EDIT!
This header is designed to be consumed by ffigen over on the Dart side.
*/

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

typedef enum PortablePtyResult {
  Ok = 0,
  ErrOpen = 1,
  ErrSpawn = 2,
  ErrResize = 3,
  ErrRead = 4,
  ErrWrite = 5,
  ErrNull = 6,
  ErrWait = 7,
  ErrKill = 8,
  ErrMode = 9,
  ErrSize = 10,
  ErrWaitBlocking = 11,
  ErrProcessGroup = 12,
} PortablePtyResult;

typedef struct PortablePty PortablePty;

/**
 * Open a new PTY with the given dimensions.
 *
 * On success, writes the opaque handle to `*out` and returns `Ok`.
 */
enum PortablePtyResult portable_pty_open(uint16_t rows, uint16_t cols, struct PortablePty **out);

/**
 * Spawn a child process attached to the PTY.
 *
 * - `cmd`: null-terminated executable path.
 * - `argv`: null-terminated array of null-terminated argument strings,
 *   or NULL to use `cmd` as the sole argument.
 * - `envp`: null-terminated array of `"KEY=VALUE"` strings, or NULL to
 *   inherit the current environment.
 */
enum PortablePtyResult portable_pty_spawn(struct PortablePty *handle,
                                          const char *cmd,
                                          const char *const *argv,
                                          const char *const *envp);

/**
 * Read bytes from the PTY master side (child's stdout).
 *
 * Returns number of bytes read, or -1 on error/EOF.
 */
int64_t portable_pty_read(struct PortablePty *handle, uint8_t *buf, uintptr_t len);

/**
 * Write bytes to the PTY master side (child's stdin).
 *
 * Returns number of bytes written, or -1 on error.
 */
int64_t portable_pty_write(struct PortablePty *handle, const uint8_t *buf, uintptr_t len);

/**
 * Resize the PTY.
 */
enum PortablePtyResult portable_pty_resize(struct PortablePty *handle,
                                           uint16_t rows,
                                           uint16_t cols);

/**
 * Get the PTY master side file descriptor.
 */
int portable_pty_master_fd(struct PortablePty *handle);

/**
 * Get the current PTY size as tracked by the kernel.
 */
enum PortablePtyResult portable_pty_get_size(struct PortablePty *handle,
                                             uint16_t *out_rows,
                                             uint16_t *out_cols,
                                             uint16_t *out_pixel_width,
                                             uint16_t *out_pixel_height);

/**
 * Get the child PID, or -1 if no child has been spawned.
 */
int32_t portable_pty_child_pid(const struct PortablePty *handle);

/**
 * Non-blocking wait for child exit.
 *
 * Returns `Ok` if child exited (writes exit code to `*out_status`).
 * Returns `ErrWait` if child is still running.
 *
 * Handles the case where the Dart VM (or another runtime) has already reaped
 * the child via its own `SIGCHLD` / `waitpid(-1, …)` handler. When the
 * upstream `try_wait()` fails with `ECHILD`, we fall back to
 * `libc::waitpid(pid, WNOHANG)` and `kill(pid, 0)` to determine the true
 * process state.
 */
enum PortablePtyResult portable_pty_wait(struct PortablePty *handle, int *out_status);

/**
 * Block until the child exits and return its exit code.
 *
 * Like `portable_pty_wait`, handles the case where the child has already
 * been reaped by the Dart VM's `SIGCHLD` handler.
 */
enum PortablePtyResult portable_pty_wait_blocking(struct PortablePty *handle, int *out_status);

/**
 * Kill the child process.
 *
 * On POSIX, `signal` is the signal number (e.g. 15 for SIGTERM).
 * On Windows, `signal` is ignored — the process is terminated.
 *
 * If the child has already exited (or been reaped), returns `Ok` rather
 * than failing.
 */
enum PortablePtyResult portable_pty_kill(struct PortablePty *handle, int signal);

/**
 * Return the master process group ID (POSIX) or -1 when unsupported.
 */
int portable_pty_process_group_leader(const struct PortablePty *handle);

/**
 * Get the current terminal mode flags.
 *
 * - `out_canonical`: true when canonical mode is enabled.
 * - `out_echo`: true when echo mode is enabled.
 */
enum PortablePtyResult portable_pty_get_mode(struct PortablePty *handle,
                                             bool *out_canonical,
                                             bool *out_echo);

/**
 * Close the PTY and free all resources.
 *
 * Kills the child process if still running. Safe to call with NULL.
 * Handles the case where the child was already reaped by the Dart VM.
 */
void portable_pty_close(struct PortablePty *handle);

#endif  /* PORTABLE_PTY_H */